--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<!DOCTYPE html><html lang="en"><head>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-    <title>netartatm</title> <!-- put your net art project title here -->
-    <link rel="stylesheet" type="text/css" href="main.css">
+
   </head>
-      <body>
-      <h3><a href="pagetwo.html">page 2</a></h3>
-      <h3><a href="pagethree.html">page 3</a></h3>
-      </body>
-    </html>
+  <body>
+    <script src="sketch.js"></script>
+  
+
+</body></html>
