--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html><html lang="en"><head>
+    <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="style1.css">
     <meta charset="utf-8">
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="sketch2.js"></script>
 </body></html>
