--- a/final.html
+++ b/final.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style1.css">
     <meta charset="utf-8">
     <script src="final.js"></script>
-
-
 </head>
 <body>
+  <button class="button button1" id="randButton">click me please.</button>
+
 </body>
 </html>
